--- a/packages/twenty-front/src/locales/ar-SA.po
+++ b/packages/twenty-front/src/locales/ar-SA.po
@@ -782,8 +782,8 @@ msgstr "احجز مكالمة"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "باستخدامك Twenty، فإنك توافق على"
+msgid "By using InsurOS, you agree to the"
+msgstr "باستخدامك InsurOS فإنك توافق على"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
