--- a/packages/twenty-front/src/locales/es-ES.po
+++ b/packages/twenty-front/src/locales/es-ES.po
@@ -782,8 +782,8 @@ msgstr "Reservar una llamada"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Al utilizar Twenty, aceptas la"
+msgid "By using InsurOS, you agree to the"
+msgstr "Al utilizar InsurOS, aceptas la"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
