--- a/packages/twenty-front/src/locales/hu-HU.po
+++ b/packages/twenty-front/src/locales/hu-HU.po
@@ -782,8 +782,8 @@ msgstr "Hívás foglalása"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "A Twenty használatával elfogadja a"
+msgid "By using InsurOS, you agree to the"
+msgstr "A InsurOS használatával elfogadja a"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
