--- a/packages/twenty-front/src/locales/no-NO.po
+++ b/packages/twenty-front/src/locales/no-NO.po
@@ -782,8 +782,8 @@ msgstr "Bestill en samtale"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Ved å bruke Twenty, samtykker du til"
+msgid "By using InsurOS, you agree to the"
+msgstr "Ved å bruke InsurOS, samtykker du til"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
