--- a/packages/twenty-front/src/locales/pt-BR.po
+++ b/packages/twenty-front/src/locales/pt-BR.po
@@ -782,8 +782,8 @@ msgstr "Agendar uma Chamada"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Ao usar o Twenty, você concorda com os"
+msgid "By using InsurOS, you agree to the"
+msgstr "Ao usar o InsurOS, você concorda com os"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
