--- a/packages/twenty-front/src/locales/cs-CZ.po
+++ b/packages/twenty-front/src/locales/cs-CZ.po
@@ -787,8 +787,8 @@ msgstr "Objednat hovor"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Použitím Twenty souhlasíte s"
+msgid "By using InsurOS, you agree to the"
+msgstr "Použitím InsurOS souhlasíte s"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
