--- a/packages/twenty-front/src/locales/fi-FI.po
+++ b/packages/twenty-front/src/locales/fi-FI.po
@@ -787,8 +787,8 @@ msgstr "Varaa puheluaika"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Twenty:tä käyttäessäsi hyväksyt"
+msgid "By using InsurOS, you agree to the"
+msgstr "InsurOS:tä käyttäessäsi hyväksyt"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
