--- a/packages/twenty-front/src/locales/ja-JP.po
+++ b/packages/twenty-front/src/locales/ja-JP.po
@@ -787,8 +787,8 @@ msgstr "電話予約"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Twentyを利用することにより、以下の事項に同意したものとみなされます。"
+msgid "By using InsurOS, you agree to the"
+msgstr "InsurOSを利用することにより、以下の事項に同意したものとみなされます。"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
