--- a/packages/twenty-front/src/locales/nl-NL.po
+++ b/packages/twenty-front/src/locales/nl-NL.po
@@ -787,8 +787,8 @@ msgstr "Boek een gesprek"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Door gebruik te maken van Twenty, gaat u akkoord met de"
+msgid "By using InsurOS, you agree to the"
+msgstr "Door gebruik te maken van InsurOS, gaat u akkoord met de"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
