--- a/packages/twenty-front/src/locales/pl-PL.po
+++ b/packages/twenty-front/src/locales/pl-PL.po
@@ -787,8 +787,8 @@ msgstr "Umów rozmowę"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Używając Twenty, zgadzasz się na"
+msgid "By using InsurOS, you agree to the"
+msgstr "Używając InsurOS, zgadzasz się na"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
