--- a/packages/twenty-front/src/locales/pt-PT.po
+++ b/packages/twenty-front/src/locales/pt-PT.po
@@ -787,8 +787,8 @@ msgstr "Marcar uma chamada"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Ao utilizar o Twenty, concorda com a"
+msgid "By using InsurOS, you agree to the"
+msgstr "Ao utilizar o InsurOS, concorda com a"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
