--- a/packages/twenty-front/src/locales/ro-RO.po
+++ b/packages/twenty-front/src/locales/ro-RO.po
@@ -787,8 +787,8 @@ msgstr "Programează un apel"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Folosind Twenty, sunteți de acord cu"
+msgid "By using InsurOS, you agree to the"
+msgstr "Folosind InsurOS, sunteți de acord cu"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
