--- a/packages/twenty-front/src/locales/sr-Cyrl.po
+++ b/packages/twenty-front/src/locales/sr-Cyrl.po
@@ -787,8 +787,8 @@ msgstr "Закажите позив"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Коришћењем Twenty, слажете се са"
+msgid "By using InsurOS, you agree to the"
+msgstr "Коришћењем InsurOS, слажете се са"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
