--- a/packages/twenty-front/src/locales/tr-TR.po
+++ b/packages/twenty-front/src/locales/tr-TR.po
@@ -787,8 +787,8 @@ msgstr "\"Twenty\"'yi kullanarak"
 
 #. js-lingui-id: 8Pfllj
 #: src/modules/auth/sign-in-up/components/FooterNote.tsx
-msgid "By using Twenty, you agree to the"
-msgstr "Twenty'i kullanarak,"
+msgid "By using InsurOS, you agree to the"
+msgstr "InsurOS'i kullanarak,"
 
 #. js-lingui-id: PmmvzS
 #: src/modules/object-record/record-table/record-table-footer/components/RecordTableColumnAggregateFooterValue.tsx
